flowc/tests/fixtures/check_e124_per_row_unknown.expected.err
tests/fixtures/check_e124_per_row_unknown.flow:4:24: error[E124]: reference to unknown name 'totally_bogus_name'
