flowc/tests/fixtures/check_e124_per_row_unknown.flow
type Plan = { id: int, cost: int }

flow choose([Plan]) -> [Plan] {
  picked = it | select totally_bogus_name
  picked
}
